# Signal-Loop

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Concord-Operational-Plan.md  IMPROVEMENT-PLAN.md  LICENSE  LICENSE-AND-ATTRIBUTION.md  PLATFORM-NOTES.md  PromptOpinion-Platform-Scope.md  README.md  SignalLoop-Built-System.md  SignalLoop-Final-Operational-Plan.md  SignalLoop-Handover.md  SignalLoop-Implementation-Plan.md  SignalLoop-Master-Spec.md  concord_multi_specialist_conflict_resolver_implementation_plan.md  fly-concord.toml
agent-config/: README.md  _convert_to_pdf.py  concord-demo-script.md  response-schema-simplified.json  response-schema.json  signalloop-demo-script.md  signalloop-scenarios.md  signalloop-tool-requirements.md  system-prompt-signalloop.md  system-prompt.md
concord-mcp/: .dockerignore  .env.example  Dockerfile  config.py  conftest.py  main.py  requirements.txt  server.py
fhir-bundles/: README.md  _convert_to_post.py  patient-doris-post.json  (+7 more)
medsafe_core/: __init__.py  config.py  helpers.py  pyproject.toml
medsafe_core/fhir/: __init__.py  client.py  resource_builders.py
medsafe_core/llm/: __init__.py  cache.py  client.py  schemas.py
medsafe_core/llm/prompts/: __init__.py  consult_extraction.py  explain_contra.py  profile_builder.py  safety_synthesis.py  suggest_alternative.py
medsafe_core/rules/: __init__.py  engine.py  normalizer.py
medsafe_core/rules/data/: beers_2023.json  beers_criteria.json  ddi_pairs.json  drug_classes.json  interaction_rules.json  renal_dose_adjustments.json  specialist_directory.json  stopp_start_v2.json
(+81 files in other folders)
